--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "@types/jsonwebtoken": "^9.0.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.8",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "stripe": "^17.5.0",
     "zod": "^3.24.1"
