--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -35,6 +36,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "stripe": "^17.5.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
