--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
