--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.2.1",
     "@react-pdf/renderer": "^4.1.6",
     "@sendgrid/mail": "^8.1.4",
+    "@sendinblue/client": "^3.3.1",
     "@stripe/stripe-js": "^5.5.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -24,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.8",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.16",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
