--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,11 @@ yarn-error.log*
 # vercel
 .vercel
 
+# large video files
+public/videos/12568306_3840_2160_30fps.mp4
+public/videos/uludag-video-1.mp4
+public/videos/uludag-video-2.mp4
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
