Optimisation du portfolio avec médias locaux : Intégration de vidéos et images pour Nike, Chanel, Microsoft, Damius, Legend Boxing, FC Castellane et Vrunk. Suppression du projet Adidas.

--- a/.vercelignore
+++ b/.vercelignore
@@ -7,3 +7,14 @@ npm-debug.log
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Git files
+.git
+.gitignore
+.gitattributes
+
+# Autres fichiers inutiles
+.vscode
+.idea
+README.md
+LICENSE
